[Added] OC-584 #comment OC-667 Created and integrated the initial data structure OC-669 Dynamically update a ViewBox of the Svg #time 5d

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -137,6 +137,7 @@ $DASHED_COLOR: #58854d;
   position: relative;
   background: #fafafa;
   border: 1px solid #eee;
+  overflow: hidden;
 }
 .technical_layout_extended {
   @extend .technical_layout;
@@ -867,7 +868,7 @@ $DASHED_COLOR: #58854d;
   transform: translateX(-50%);
   bottom: 34px;
   z-index: 999;
-  padding: 40px 40px 60px;
+  padding: 20px 40px 40px;
   border-radius: 4px;
   display: flex;
   align-items: center;
