[Modified] OC-682 #comment integrated delete icon for references #time 8h

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -692,6 +692,10 @@ $DASHED_COLOR: #58854d;
   padding-right: 10px;
   display: grid;
 }
+.body_data_without_enhancement{
+  @extend .body_data;
+  display: grid;
+}
 .body_mapping{
   width: 33%;
   float: left;
