--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -893,7 +893,7 @@ $DASHED_COLOR: #58854d;
     left: -5px;
     right: -5px;
     bottom: -5px;
-    box-shadow: inset 0 0 0 3000px #f3f3f3;
+    box-shadow: inset 0 0 0 3000px #f3f3f3a9;
     filter: blur(10px);
   }
 
