[Modified] OC-726 #comment changed the display of the speed slider in the vertical direction #time 1h

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -978,8 +978,10 @@ $DASHED_COLOR: #58854d;
   top: 20px;
   left: 20px;
   z-index: 100000;
-  padding: 15px 10px;
+  padding: 15px 30px;
   display: flex;
+  flex-direction: column;
+  height: 200px;
   align-items: center;
   gap: 10px;
   background: #FFF;
