--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -977,16 +977,15 @@ $DASHED_COLOR: #58854d;
   position: fixed;
   top: 20px;
   left: 20px;
-  z-index: 100000;
-  padding: 15px 30px;
+  z-index: 1051;
+  padding: 15px;
   display: flex;
   flex-direction: column;
-  height: 200px;
   align-items: center;
   gap: 10px;
   background: #FFF;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  opacity: 0.3;
+  // opacity: 0.3;
   transition: 0.3s;
   &:hover{
     opacity: 1;
