--- a/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_svg/details/test_method/styles.scss
+++ b/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_svg/details/test_method/styles.scss
@@ -24,3 +24,9 @@
   display: flex !important;
   margin: 0 0 0 auto !important;
 }
+
+.openTestMethodDialogButton{
+  margin: 20px auto 0 !important;
+  display: flex !important;
+  padding: 8px 50px !important;
+}
