[Added] OC-737 #comment implemented shortcuts #time 3h

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -1002,6 +1002,10 @@ $DASHED_COLOR: #58854d;
   }
 }
 
+.shortcutsDialog{
+  min-width: 80vw !important;
+}
+
 @keyframes AnItemAppear {
   from {
     opacity: 0;
