--- a/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_svg/details/test_method/styles.scss
+++ b/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_svg/details/test_method/styles.scss
@@ -1,20 +1,26 @@
+
+.col {
+  padding: 0 !important;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.testMethod_icon {
+  color: #c0c0c5;
+  cursor: pointer;
+  padding: 2px;
+  margin-left: 2px;
+}
+.testMethod_icon:hover {
+  color: #444b4c;
+  padding: 2px;
+  box-shadow: #9f9f9f 0 1px 3px 0;
+}
 .testMethod_dialog{
   min-width: 80%;
 }
 
-.testMethod_title{
-  font-weight: normal !important;
-}
-
-.testMethod_title h5 span::before{
-  content: "Test ";
-  font-weight: normal;
-}
-
-.testMethod_title h5 span::after{
-  content: " method";
-  font-weight: normal;
-}
 
 .test_method_json{
   background-color: #000;
