[Modified] OC-515 #comment minor changes in xml layout #time 10m

--- a/src/frontend/src/components/base/input/xml_view/xml_editor/form_methods.scss
+++ b/src/frontend/src/components/base/input/xml_view/xml_editor/form_methods.scss
@@ -1087,8 +1087,8 @@
 
 .method_body_xml{
   @extend .method_body;
-  width: 500px;
-  max-height: 300px;
+  width: 100%;
+  max-height: 100%;
   min-height: 64px;
 }
 .method_body_xml_draft{
