[Fixed] OC-834 #comment fixing bug in endpoint #time 4h

--- a/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/general/form_methods.scss
@@ -768,6 +768,9 @@
 .method_endpoint_label_has_error{
   color: red;
 }
+.endpoint_editable:focus-visible {
+  outline: none;
+}
 .method_endpoint_delimiter{
    width: 5%;
    float: left;
