[Modified] OC-657 #comment merging with backend #time 2h

--- a/src/frontend/src/entities/category/components/category_tabs/styles.scss
+++ b/src/frontend/src/entities/category/components/category_tabs/styles.scss
@@ -21,6 +21,7 @@
   border-color: #2372BA;
   box-shadow: 0px 0px 5px 0px #2372BA;
   padding-top: 15px;
+  cursor: default;
 }
 
 .tab:not(.active_tab):hover{
