--- a/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_methods/method/styles.scss
+++ b/src/frontend/src/entities/connection/components/components/general/change_component/form_elements/form_connection/form_methods/method/styles.scss
@@ -13,6 +13,10 @@
   user-select: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   box-sizing: border-box;
+  border-bottom: 1px solid #eee;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .item:hover{
   background-color: #DEEBFF;
