[Modified] OC-892 #comment integrated webhook if and loop operators #time 3h

--- a/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/src/entities/connection/components/themes/default/content/connections/connection_overview_2.scss
@@ -638,6 +638,12 @@ $DASHED_COLOR: #58854d;
 .condition_dialog {
   min-width: 750px;
 }
+.condition_content {
+  min-height: 250px;
+}
+.condition_body {
+  margin-top: 20px;
+}
 .url_dialog {
   min-width: 750px;
 }
